# craft_kitchen_kneading

./: .gitignore  README.MD  main.env  pyproject.toml
project/: alembic.ini  base_settings.py  health.db  main.py  makemigrations.py  migrate.py
project/core/: api.py  app.py  models.py  repositories.py  serializers.py
project/database/: config.py  engine.py  mixins.py  model.py
project/migrations/: env.py  script.py.mako
project/migrations/versions/: 08f2636195ed_2025_02_27t14_46_30_989436_create_root_.py  3b98ed404991_2025_02_27t15_10_28_187303_add_groups.py  3c84a7a33f5d_2025_02_27t16_10_49_666636_add_roles.py  a27bcf59c000_2025_02_27t18_43_02_166561_init.py
project/services/auth/: app.py  exceptions.py  security.py
project/services/auth/api/: repositories.py  routes.py  serializers.py
project/services/personality/: app.py  models.py
project/services/personality/api/: __init__.py  permission_repository.py
project/services/personality/api/groups/: repositories.py  routes.py  serializers.py
project/services/personality/api/roles/: repositories.py  routes.py  serializers.py
project/services/personality/api/users/: repositories.py  routes.py  serializers.py
project/services/task/: api.py
